// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`publish-document-with-descendants should handle publishing a non-existent document 1`] = `
{
  "content": [
    {
      "text": "Error using publish-document-with-descendants:
{
  "message": "Request failed with status code 404",
  "response": ""
}",
      "type": "text",
    },
  ],
}
`;

exports[`publish-document-with-descendants should publish a document and its descendants 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
